--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "dotenv>=0.9.9",
     "flask>=3.1.2",
     "gunicorn>=23.0.0",
+    "psycopg2-binary>=2.9.10",
+    "validators>=0.35.0",
 ]
 
 [build-system]
